	 if the current machine supports this kind of disk.
20040402 tape.c: add tape trap checks for the +3e.
20040403 widget/roms.c: Fix ROM name lookup for labels
20040403 widget/select.c: Add <string.h> for strlen
20040403 ui/sdl/sdldisplay.c: Fix icon overlays for timex machines
20040403 ui.c: Add <string.h> for strncpy and strcmp
20040404 ay.h,sound.h,machines/{pentagon.c,scorpion.c,spec128.c,spec16.c,
	 spec48.c,specplus2.c,specplus2a.c,specplus3.c,specplus3e.c,
	 tc2048.c,tc2068.c}: remove use of ayinfo.present.
20040406 input.c,input.h,keyboard.h,settings.dat: make the 'real joystick
	 fire' action configurable to be either 'emulated joystick fire'
	 or 'press a key'.
20040407 ui/gtk/{browse.c,debugger.c,pokefinder.c}: prevent segfault if
	 the keyboard (space) is used to select things from a GtkCList
	 (Darren).
20040407 joystick.[ch]: add emulation of the two Sinclair-type joysticks.
20040408 input.c,keyboard.[ch],keysyms.pl: use hash tables rather than
	 linear lookup to do the three levels of keyboard remapping.
20040408 ui/gtk/debugger.c: add a simple memory map pane.
20040409 memory.h,snapshot.c,utils.c,machines/{pentagon.c,scorpion.c,
	 spec128.c,spec16.c,spec48.c,specplus3.c,tc2048.c,tc2068.c},
	 ui/gtk/debugger.c,z80/z80_ops.c: add the beginnings of code to
	 allow breakpoints to be set on pages other than RAM (eg ROM,
	 DOCK, EXROM).
20040409 ui/gtk/debugger.c: add indications of whether a chunk is writable
	 and/or contended to the memory map pane.
20040409 machines/tc2068.c: #include <string.h> for memset.
20040410 ui/gtk/browse.c: #include <string.h> for strcpy.
20040111 Revamp of menu system to share code between the GTK+ and widget
	 implementations (patch #931017).
20040406 compat.h,debugger/expression.c,fuse.[ch],input.c,joystick.c,
	 nullsound.c,tape.c,utils.c,widget/menu.c: declare fuse_abort()
	 to never return and remove the 'keep gcc happy' bits this
	 assumption makes unnecessary.