@@ -102,7 +102,7 @@ int settings_init( int *first_arg, int argc, char **argv );
 int settings_defaults( settings_info *settings );
 int settings_copy( settings_info *dest, settings_info *src );
 
-#define SETTINGS_ROM_COUNT 24
+#define SETTINGS_ROM_COUNT 28
 extern const char *settings_rom_name[ SETTINGS_ROM_COUNT ];
 char **settings_get_rom_setting( settings_info *settings, size_t which );
 
